fix: spacing on cta

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -285,7 +285,7 @@ h6 {
 
 .header #svg {
   width: 100%;
-  max-height: 50px;
+  max-height: 120px;
 }
 
 .header .btn {
